# rubikoslav

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  deploy.yml  docs.yml  format.yml  release.yml
api/: solve.py
cpp/: CMakeLists.txt
cpp/cmake/: RubikoslavConfig.cmake.in
cpp/examples/: CMakeLists.txt  solve_scramble.cpp
cpp/include/Rubikoslav/: Cuboslav.hpp  Move.hpp  Stopwatch.hpp
cpp/src/: Cuboslav.cpp  CuboslavWrapper.cpp  Move.cpp
cpp/tests/: CMakeLists.txt  CubeTests.cpp
cpp/tools/: generate_cube_data.cpp
docs/: architecture.md  browser-typescript.md  cli.md  cpp-api.md  development.md  getting-started.md  index.md  production.md  publishing.md  python-api.md  troubleshooting.md  visualizer.md
docs/stylesheets/: extra.css
python/rubikoslav/: __init__.py  cli.py  solver.py
python/tests/: test_cli.py  test_solver.py  test_web_docs.py
scripts/: check_release.py  check_web_build.ts  format_all.sh
web/: CMakeLists.txt  api.html  app.js  index.html  styles.css
web/src/: app.ts  backend-client.ts  camera-controller.ts  cube-renderer.ts  dom.ts  move-utils.ts  timeline-view.ts
web/styles/: api-guide.css  app-shell.css  cube-stage.css  dialogs.css  foundation.css  move-controls.css  responsive.css
