[build-system]
requires = ["scikit-build-core==0.12.2", "pybind11==3.0.4"]
build-backend = "scikit_build_core.build"

[project]
name = "rubikoslav"
version = "0.4.0"
description = "C++ Rubik's Cube engine, optimal solver, Python API, and interactive visualizer"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
dependencies = ["cube-solver==1.1.4", "typing-extensions==4.15.0"]
keywords = ["rubiks-cube", "solver", "cpp", "pybind11", "visualization"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: C++",
  "Programming Language :: C++ :: 20",
  "Programming Language :: Python :: 3",
  "Topic :: Games/Entertainment :: Puzzle Games",
]

[project.scripts]
rubikoslav = "rubikoslav.cli:main"

[dependency-groups]
dev = []

[tool.scikit-build]
wheel.packages = ["python/rubikoslav"]
cmake.build-type = "Release"
build-dir = "build/uv/{wheel_tag}"
sdist.inclusion-mode = "manual"
sdist.include = [
  "/CMakeLists.txt",
  "/pyproject.toml",
  "/cpp/",
  "/python/rubikoslav/*.py",
  "/python/tests/*.py",
  "/api/*.py",
  "/web/",
  "/vercel.json",
  "/LICENSE",
  "/README.md",
]
sdist.exclude = [
  "/.codex-vault/",
  "/.git/",
  "/.venv/",
  "/build*/",
  "/dist/",
  "**/__pycache__/",
  "*.pyc",
  "*",
]

[tool.scikit-build.cmake.define]
RUBIKOSLAV_BUILD_PYTHON = "ON"
RUBIKOSLAV_BUILD_EXAMPLES = "OFF"
RUBIKOSLAV_BUILD_WEB = "OFF"
BUILD_TESTING = "OFF"

[tool.vercel]
entrypoint = "api.solve:handler"
