[build-system]
requires = ["scikit-build-core==0.12.2", "pybind11==3.0.4"]
build-backend = "scikit_build_core.build"

[project]
name = "rubikoslav"
version = "0.4.1"
description = "Verified 3x3 Rubik's Cube solver with visualisation."
authors = [{name = "Jaloliddin Ismailov"}]
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0"
license-files = ["LICENSE"]
dependencies = ["cube-solver==1.1.4", "typing-extensions==4.15.0"]
keywords = ["rubiks-cube", "solver", "cpp", "pybind11", "visualisation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Games/Entertainment :: Puzzle Games",
]

[project.urls]
Homepage = "https://rubikoslav.vercel.app"
Documentation = "https://unnobatroo.github.io/rubikoslav/"
Repository = "https://github.com/unnobatroo/rubikoslav"
Issues = "https://github.com/unnobatroo/rubikoslav/issues"

[project.scripts]
rubikoslav = "rubikoslav.cli:main"

[dependency-groups]
dev = []
docs = ["mkdocs==1.6.1", "mkdocs-material==9.7.6"]

[tool.scikit-build]
wheel.packages = ["python/rubikoslav"]
cmake.build-type = "Release"
build-dir = "build/uv/{wheel_tag}"
sdist.inclusion-mode = "manual"
sdist.include = [
  "/CMakeLists.txt",
  "/pyproject.toml",
  "/cpp/",
  "/python/rubikoslav/*.py",
  "/python/tests/*.py",
  "/scripts/check_release.py",
  "/scripts/check_web_build.ts",
  "/api/*.py",
  "/web/",
  "/package.json",
  "/package-lock.json",
  "/tsconfig.json",
  "/vercel.json",
  "/LICENSE",
  "/README.md",
]
sdist.exclude = [
  "/.codex-vault/",
  "/.git/",
  "/.venv/",
  "/build*/",
  "/dist/",
  "**/__pycache__/",
  "*.pyc",
  "*",
]

[tool.scikit-build.cmake.define]
RUBIKOSLAV_BUILD_PYTHON = "ON"
RUBIKOSLAV_BUILD_EXAMPLES = "OFF"
RUBIKOSLAV_BUILD_WEB = "OFF"
BUILD_TESTING = "OFF"

[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*"]
skip = ["*-musllinux_*", "*_i686", "*_ppc64le", "*_s390x"]
test-command = "python -c \"from rubikoslav import CuboslavWrapper; cube = CuboslavWrapper(); initial = cube.getCube(); cube.move('R'); cube.move(\\\"R'\\\"); assert cube.getCube() == initial\""

[tool.vercel]
entrypoint = "api.solve:handler"
